--- a/contato.css
+++ b/contato.css
@@ -29,7 +29,7 @@ p {
     height: 100%;
     background-image: linear-gradient(to right, black, rgb(68, 67, 67));
     overflow: hidden;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Ubuntu Condensed', sans-serif;
 }
 .topnav a.active {
     background-color: #253074;
@@ -43,16 +43,9 @@ p {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    font-family: 'Ubuntu Condensed', sans-serif;
 }
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
+
 a:hover {
     cursor: pointer;
 }
